// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/pill-selector-dropdown/PillSelectorDropdownField should render PillSelectorDropdown with default dropdown renderer 1`] = `
<PillSelectorDropdown
  allowCustomPills={true}
  allowInvalidPills={true}
  disabled={false}
  error={null}
  inputProps={
    Object {
      "name": undefined,
    }
  }
  label=""
  onBlur={[Function]}
  onInput={[Function]}
  onPillCreate={[Function]}
  onRemove={[Function]}
  onSelect={[Function]}
  parseItems={[Function]}
  placeholder=""
  selectedOptions={Array []}
  selectorOptions={
    Array [
      Object {
        "displayText": "value1",
        "value": "value1",
      },
      Object {
        "displayText": "value2",
        "value": "value2",
      },
      Object {
        "displayText": "value3",
        "value": "value3",
      },
    ]
  }
  shouldClearUnmatchedInput={false}
  shouldSetActiveItemOnOpen={true}
  validator={[Function]}
>
  <DatalistItem
    key="value1"
  >
    value1
  </DatalistItem>
  <DatalistItem
    key="value2"
  >
    value2
  </DatalistItem>
  <DatalistItem
    key="value3"
  >
    value3
  </DatalistItem>
</PillSelectorDropdown>
`;

exports[`components/pill-selector-dropdown/PillSelectorDropdownField should render PillSelectorDropdown with no dropdown when no options 1`] = `
<PillSelectorDropdown
  allowCustomPills={true}
  allowInvalidPills={true}
  disabled={false}
  error={null}
  inputProps={
    Object {
      "name": undefined,
    }
  }
  label=""
  onBlur={[Function]}
  onInput={[Function]}
  onPillCreate={[Function]}
  onRemove={[Function]}
  onSelect={[Function]}
  parseItems={[Function]}
  placeholder=""
  selectedOptions={Array []}
  selectorOptions={Array []}
  shouldClearUnmatchedInput={false}
  shouldSetActiveItemOnOpen={true}
  validator={[Function]}
/>
`;

exports[`components/pill-selector-dropdown/PillSelectorDropdownField should render error when touched 1`] = `
<PillSelectorDropdown
  allowCustomPills={true}
  allowInvalidPills={true}
  disabled={false}
  error="error"
  inputProps={
    Object {
      "name": "pill",
    }
  }
  label=""
  onBlur={[Function]}
  onInput={[Function]}
  onPillCreate={[Function]}
  onRemove={[Function]}
  onSelect={[Function]}
  parseItems={[Function]}
  placeholder=""
  selectedOptions={Array []}
  selectorOptions={Array []}
  shouldClearUnmatchedInput={false}
  shouldSetActiveItemOnOpen={true}
  validator={[Function]}
/>
`;
